changed index and about layout, along with change style.css

--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -14,15 +16,20 @@
             <ul class="main-nav">
                 <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
-                <li><a href="resume.html">resume</a></li>
+                <li><a href="resume.html" class="btn">resume</a></li>
             </ul>
             <div class="left">
                 <img src="resources/img/Self-Portrait.jpg">
             </div>
-            <div class="right">
+            <div class="left">
                 <p>My name is Gouffary Ghazali, but I go by Ghoza. I am a Calgary-based <span>Junior Programmer</span> and <span>Junior Data Analyst</span>, currently pursuing a Bachelor's in Computer Information Systems at Mount Royal University. With a mix of formal education and desire to learn, I have honed my expertise in programming and analysis. Courses on platforms like Udemy have been instrumental in nurturing my tech prowness, allowing me to stay updated with the latest trends.</p>
                 <p class="para">When I'm not busy in the digital world, I love embracing the great outdoors. Hiking, biking, soccer, basketball, fitness and unwinding with video games.</p>
                 <p class="para">Here is my resume: <a href="resume.html"><ion-icon name="document-outline" class="logo-document"></ion-icon></a></p>
+                <ul class="hyper-links">
+                    <li><a href="mailto:gouffaryghazali@gmail.com?subject=Job Opportunity"><ion-icon name="mail" class="mail ion-logo"></ion-icon></a></li>
+                    <li><a href="https://www.linkedin.com/in/gouffary-ghazali-b75a721b0/"><ion-icon name="logo-linkedin" class="logo-linkedin ion-logo"></ion-icon></ion-icon></a></li>
+                    <li><a href="https://github.com/ItzChaBoiGhoza?tab=repositories"><ion-icon name="logo-github" class="logo-github ion-logo"></ion-icon></ion-icon></a></li>
+                </ul>
             </div>
         </div>
 
