--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <meta charset="UTF-8">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,28 +14,29 @@
         
     </head>
     <body>
-        <div class="hero anim-typewriter">
-            <h1>Hi. I'm Gouffary Ghazali</h1>
-            <h1>A Junior Programmer and Junior Data Analyst</h1>
+        <div class="hero">
+            <h1>Hi. I'm Ghoza &#128400</h1>
+            <h1>A Junior Programmer</h1>
+            <h1> and Data Analyst</h1>
             <ul class="main-nav">
                 <li><a href="#">home</a></li>
                 <li><a href="about.html">about</a></li>
-                <li><a href="resume.html">resume</a></li>
+                <li><a href="resume.html" class="btn">resume</a></li>
             </ul>
-            <ul class="hyper-links invis">
+            <!-- <ul class="hyper-links">
                 <li><a href="mailto:gouffaryghazali@gmail.com?subject=Job Opportunity"><ion-icon name="mail" class="mail ion-logo"></ion-icon></a></li>
                 <li><a href="https://www.linkedin.com/in/gouffary-ghazali-b75a721b0/"><ion-icon name="logo-linkedin" class="logo-linkedin ion-logo"></ion-icon></ion-icon></a></li>
                 <li><a href="https://github.com/ItzChaBoiGhoza?tab=repositories"><ion-icon name="logo-github" class="logo-github ion-logo"></ion-icon></ion-icon></a></li>
-            </ul>
-            <p class="nav-scroll-instruction invis">View Projects</p>
-            <ion-icon name="chevron-down-outline" class="logo-down nav-scroll invis"></ion-icon>
+            </ul> -->
+            <p class="nav-scroll invis">View Projects</p>
+            <a href="#project-nav"><ion-icon name="chevron-down-outline" class="logo-down nav-scroll invis"></ion-icon></a>
+            <a href="#" class="btn-ghost">Reach Out</a>
         </div>
-        <div class="project-1 proj">
+        <div class="project-1 proj" id="project-nav">
             <div class="projects">
                 <div class="project-title">
                     <h4 class="numerical-title">01</h4>
-                    <h2 class="title">Adventure Works - </h2>
-                    <h1 class="project-title-description">Adventure Works Report</h1>
+                    <h1 class="title">Adventure Works Report</h1>
                 </div>
                 <div class="project-container">
                     <div class="slide slide1 fade">
@@ -66,8 +69,7 @@
             <div class="projects">
                 <div class="project-title">
                     <h4 class="numerical-title">02</h4>
-                    <h2 class="title">Maven Works - </h2>
-                    <h1 class="project-title-description">Maven Works Report</h1>
+                    <h1 class="title">Maven Works Report</h1>
                 </div>
                 <div class="project-container">
                     <div class="slide slide2 fade">
@@ -100,8 +102,7 @@
             <div class="projects">
                 <div class="project-title">
                     <h4 class="numerical-title">03</h4>
-                    <h2 class="title">School Project - </h2>
-                    <h1 class="project-title-description">Data Analysts</h1>
+                    <h1 class="title">Data Analysts</h1>
                 </div>
                 <div class="project-container">
                     <div class="slide slide3 fade">
@@ -134,8 +135,7 @@
             <div class="projects">
                 <div class="project-title">
                     <h4 class="numerical-title">04</h4>
-                    <h2 class="title">School Project - </h2>
-                    <h1 class="project-title-description">System Analysts</h1>
+                    <h1 class="title">System Analysts</h1>
                 </div>
                 <div class="project-container">
                     <div class="slide slide4 fade">
@@ -168,8 +168,7 @@
             <div class="projects">
                 <div class="project-title">
                     <h4 class="numerical-title">05</h4>
-                    <h2 class="title">MIIT - </h2>
-                    <h1 class="project-title-description">Web Development</h1>
+                    <h1 class="title">MIIT Web Development</h1>
                 </div>
                 <div class="project-container">
                     <div class="slide slide5 fade">
